files added for cros origin

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:5000
-VITE_FRONTEND_URL=http://localhost:5173
+VITE_BACKEND_URL= http://localhost:5000
+VITE_FRONTEND_URL=https://resort1-bi41.vercel.app
